# ai-liepin

./: .env.example  .gitignore  README.md  WINDOWS_README.txt  pyproject.toml  run_admin_tool.bat  setup.cfg  启动授权打包工具.bat
.github/workflows/: windows-build.yml
config/: example_job.yml
data/recordings/: web_record_20260610_214041.json  web_record_20260611_164519.json  web_record_20260611_180458.json
docs/: liepin_research.md  猎聘招聘智能体使用手册.docx
packaging/: liepin_agent_windows.spec
scripts/: admin_tool_gui.py  build_windows.ps1  create_usage_manual.py  license_tool.py  research_accounts.py  upload_release_to_oss.py
src/liepin_agent/: __init__.py  browser.py  cli.py  db.py  desktop.py  greeting.py  jd_parser.py  license.py  liepin_page_adapter.py  liepin_scripts.py  models.py  runner.py  scoring.py  settings.py  task_engine.py  task_executor.py  task_runtime.py  task_workflow.py  updater.py  version.py
tests/: test_db.py  test_greeting.py  test_jd_parser.py  test_license.py  test_liepin_page_adapter.py  test_scoring.py  test_task_engine.py  test_task_executor.py  test_task_runtime.py  test_task_workflow.py  test_task_workflow_conditions.py  test_updater.py
