[project]
name = "liepin-recruiting-agent"
version = "0.1.0"
description = "A configurable recruiting assistant for searching, scoring, and greeting candidates on Liepin."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "cryptography>=42.0.0",
    "openai>=1.50.0",
    "playwright>=1.47.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "rich>=13.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
]
desktop = [
    "PySide6>=6.7.0",
]
packaging = [
    "pyinstaller>=6.10",
]

[project.scripts]
liepin-agent = "liepin_agent.cli:main"
liepin-agent-desktop = "liepin_agent.desktop:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
