[metadata]
name = liepin-recruiting-agent
version = 0.1.0
description = A configurable recruiting assistant for searching, scoring, and greeting candidates on Liepin.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    beautifulsoup4>=4.12.3
    cryptography>=42.0.0
    openai>=1.50.0
    playwright>=1.47.0
    pydantic>=2.8.2
    pydantic-settings>=2.4.0
    python-dotenv>=1.0.1
    pyyaml>=6.0.2
    rich>=13.8.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8.3.2
desktop =
    PySide6>=6.7.0

[options.entry_points]
console_scripts =
    liepin-agent = liepin_agent.cli:main
    liepin-agent-desktop = liepin_agent.desktop:main
